<resources>
    <string name="app_name">Students App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log out</string>
    <string name="action_contact">Contact</string>
    <string name="action_about">About</string>


    <string name="even_year1">Jan-May 2016</string>
    <string name="odd_year1">Jul-Nov 2016</string>
    <string name="even_year2">Jan-May 2017</string>
    <string name="odd_year2">Jul-Nov 2017</string>
    <string name="about_us">This app is developed by Institute Mobops Team 2017–18. All rights are reserved</string>
    <string name="complaint_check_box_msg">I have already informed a mess/facilities managers prior to this complaint.</string>

    <string name="error_connection">Couldn\'t connect to the server.</string>
    <string name="error_parsing">Error getting data, try again later…</string>
    <string name="error_no_result">No results found.</string>
    <string name="error_sending">Error sending data, try again later…</string>
    <string name="error_enter_more_characters">Enter three or more characters to get results.</string>
    <string name="error_no_complaints">No complaints registered.</string>


    <integer name="close_nav_drawer_delay">150</integer>

    <integer name="nav_index_home">0</integer>
    <integer name="nav_index_room_alloc">1</integer>
    <integer name="nav_index_search">2</integer>
    <integer name="nav_index_contacts">3</integer>
    <integer name="nav_index_schroeter">4</integer>
    <integer name="nav_index_maps">5</integer>
    <integer name="nav_index_eml">6</integer>
    <integer name="nav_index_t5e">7</integer>
    <integer name="nav_index_mess">8</integer>
    <integer name="nav_index_calendar">9</integer>

    <string name="LoginURl">https://students.iitm.ac.in/studentsapp/login/index.php</string>
    <string name="url_register_fcm">https://students.iitm.ac.in/studentsapp/general/token_register.php</string>
    <string name="url_get_threads">https://students.iitm.ac.in/studentsapp/hasportal/threads.php</string>
    <string name="url_get_messages">https://students.iitm.ac.in/studentsapp/hasportal/get_messages.php</string>
    <string name="url_send_message">https://students.iitm.ac.in/studentsapp/hasportal/send_message.php</string>
    <string name="url_complaint_resolve">https://students.iitm.ac.in/studentsapp/hasportal/complaint_resolved.php</string>
    <string name="url_complaint_post">https://students.iitm.ac.in/studentsapp/hasportal/post.php</string>
    <string name="url_fetch_list">https://students.iitm.ac.in/studentsapp/hasportal/fetch.php?type1=</string>
    <string name="fifthettateurl">http://www.t5eiitm.org/wp-json/wp/v2/posts</string>
    <string name="url_eml">https://students.iitm.ac.in/studentsapp/eml/lecs.php</string>
    <string name="url_home">https://students.iitm.ac.in/studentsapp/general/getnotifs.php</string>
    <string name="url_eml_upcoming">https://students.iitm.ac.in/studentsapp/eml/upcoming_lecs.php</string>
    <string name="url_schroiter_updates">https://students.iitm.ac.in/studentsapp/schroeter/get_updates.php</string>
    <string name="url_schroiter_scores">https://students.iitm.ac.in/studentsapp/schroeter/get_links.php</string>
    <string name="url_complaint_categories">https://students.iitm.ac.in/studentsapp/hasportal/get_complaint_categories.php</string>

    <string name="title_activity_student_search">Student Search</string>
    <string name="title_activity_map">Institute Map</string>
    <string name="title_activity_imp_contacts">Important Contacts</string>
    <string name="title_activity_eml">EML</string>
    <string name="title_activity_eml_long">Extra Mural Lectures</string>
    <string name="title_activity_t5e">T5E</string>
    <string name="title_activity_t5e_long">The Fifth Estate</string>
    <string name="title_activity_mess_and_facilities">Mess and Facilities</string>
    <string name="title_activity_student_details">Student Info</string>
    <string name="title_activity_home">Notifications</string>
    <string name="title_activity_thread">Complaints</string>
    <string name="title_activity_message_chat">Chat</string>
    <string name="title_activity_list">New Complaint</string>
    <string name="title_activity_complaint">Complaint</string>
    <string name="title_activity_news">Article</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_emldetails">Lecture Details</string>
    <string name="title_activity_emlfeedback">Feedback Or Questionnaire</string>
    <string name="title_activity_schroiter">Schroeter</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_subscriptions">Subscriptions</string>

    <string name="update_message">Some Important Features Have Been Added.</string>
    <string name="update">Update</string>
    <string name="dont_update">No, Thanks</string>
    <string name="force_update">Update :|</string>
    <string name="dismiss_home_dialog">Dismiss</string>
    <string name="go_to_link">Go to link</string>

    <string name="subscribe">Subscribe</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="msg_subscribed">Notifications On</string>
    <string name="msg_unsubscribed">Notifications Off</string>

    <string name="search_places">Search places</string>


    <string name="search_hint">Name of the place</string>
    <string name="search_title">Search a location</string>
    <string name="bus_route">Show Bus Route</string>

</resources>
