<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/bus_route"
        android:icon="@drawable/ic_directions_bus_white_24dp"
        android:title="@string/bus_route"
        app:showAsAction="always" />
    <item
        android:id="@+id/search_go_btn"
        android:checkable="false"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_title"
        app:showAsAction="always" />


    <!-- Settings, should always be in the overflow -->

    <item
        android:id="@+id/action_about"
        android:orderInCategory="98"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="99"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/action_log_out"
        app:showAsAction="never" />

</menu>